3 Spalten mit Produkten auf Startseite hinzugefügt

--- a/index.html
+++ b/index.html
@@ -56,13 +56,41 @@
         <!-- Das große Bild am Anfang der Seite -->
         <div class="FrontPicture-Startseite">
           <div class="FrontPicture-Text-Startseite">
-            <h1> Wir sind Bikepower </h1>
-            <p> Mit unseren Komplett-Sets ermöglichen wir Ihnen Ihr aktuelles Fahrrad kinderleicht in ein E-Bike zu verwandeln! </p>
+            <h1> Verwandeln Sie Ihr aktuelles Fahrrad kinderleicht in ein E-Bike! </h1>
           </div>
         </div>
 
         <!-- der Trennstreifen -->
-        <h1 class="separator"> Unsere Benefits</h1>
+        <h1 class="separator"> Unsere Komplett-Sets </h1>
+        <!-- Container mit Produkten  -->
+
+      <div class="wrapper_für_container">  <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
+
+        <h2 class="werbespruch-startseite"> Wie bieten Ihnen Komplett-Sets in verschiedenen Preisklassen mit denen Sie
+                                             ihr Fahrrad selbst zu einem leistungsstarken E-Bike umrüsten können!
+        </h2>
+
+        <div class="container-startseite-mit-3-spalten">
+          <div class="row">
+
+            <div class="column-33">
+              <img src="Bikestail_Produktpaket.JPG" alt="Bikestail Bild" width="350" height="500">
+            </div>
+
+            <div class="column-33">
+              <img src="edrive_150_480x480px.png" alt="edrive 150" width="350" height="500">
+            </div>
+
+            <div class="column-33">
+              <img src="edrive1000.jpg" alt="edrive1000" width="350" height="500">
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+        <!-- der Trennstreifen -->
+        <h1 class="separator"> Warum bei uns bestellen? </h1>
 
         <div class="wrapper_für_container">
           <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
@@ -74,9 +102,10 @@
                 <img src="Montur.svg" alt="Monturpiktogramm" width="350" height="500">
               </div>
               <div class="column-50-right">
-                <h2> Das schaffen Sie mit links! </h2>
-                <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren.
-                  Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.
+                <h2> Sie schaffen das mit links! </h2>
+                <p>Unsere Produkte sind kinderleicht an dem Großteil der handelsüblichen Fahrräder zu montieren.
+                   Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester
+                   Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.
                 </p>
               </div>
             </div>
@@ -86,9 +115,11 @@
           <div class="container-2">
             <div class="row">
               <div class="column-50-left">
-                <h2> Worlwide und doch direkt vor Ihrer Haustüre </h2>
-                <p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz. </p>
-                <button class="read_more_button" style?="background-color:blue">Read more</button>
+                <h2> Weltweite Verfügbarkeit! </h2>
+                  <p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt
+                    von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt
+                    bleiben die Lieferwege trotzdem kurz.
+                  </p>
               </div>
               <div class="column-50-right">
                 <img src="worldwide.svg" alt="Weltsymbol" width="350" height="500">
@@ -99,29 +130,16 @@
           <!-- 2 Spalten Container mit links Bild rechts Text -->
           <div class="container-1">
             <div class="row">
-              <div class="column-50-left">
-                <img src="mitarbeiter.svg" alt="Mitarbeiterpiktogramm" width="350" height="500">
-              </div>
-              <div class="column-50-right">
-                <h2> Unsere Mitarbeiter sind mit Herzblut dabei </h2>
-                <p> ... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien von den Einnahmen unserer Mitarbeiter leben können.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- 2 Spalten Container mit rechts Bild links Text -->
-          <div class="container-2">
-            <div class="row">
-              <div class="column-50-left">
-                <h2> Die Umwelt geht uns alle etwas an </h2>
-                <p> Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.
-                </p>
-                <button class="read_more_button" style?="background-color:blue">Read more</button>
-              </div>
-              <div class="column-50-right">
-                <img src="Nachhaltigkeit.svg" alt="Nachhaltigkeitssymbol" width="350" height="500">
-              </div>
+                <div class="column-50-left">
+                <img src="Nachhaltigkeit.svg" alt="Nachhaltigkeitspiktogramm" width="350" height="500">
+                </div>
+                <div class="column-50-right">
+                  <h2> Sie tun etwas für die Umwelt! </h2>
+                      <p> Sie brauchen Ihr momentanes Fahrrad nicht zu entsorgen, um den Fahrspaß eines E-Bikes zu genießen.
+                          Zudem sind unsere Produkte zu 70 Prozent aus recycelte Materialien.
+                          Das ist ihr Beitrag für ein nachhaltiges Morgen
+                      </p>
+                </div>
             </div>
           </div>
 
