Verlinkungen hinzugefügt und kleine Details geändert

--- a/Produkt.html
+++ b/Produkt.html
@@ -292,7 +292,7 @@
 		</div>
   </div> <!-- schließender div Block für Wrapper der Container  -->
 		<!-- der grüne Block mit Premium-->
-		<h2 class="separator m-t-35">Premium Variante 2</h2>
+		<h1 class="separator m-t-35" id="premium_variante_2">Premium Variante 2 </h1>
 
   <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
