--- a/index.html
+++ b/index.html
@@ -74,30 +74,33 @@
           <div class="row">
 
             <div class="column-33">
-              <img src="Bikestail_Produktpaket.JPG" alt="Bikestail Bild" width="350" height="500" class="image-für-overlay">
+              <img src="Bikestail_480x480px.png" alt="Bikestail Bild" width="350" height="500" class="image-für-overlay">
               <div class="middle">
                 <div class="overlay-text">
                   <a href="Produkt.html#standard_variante"> Standard </a>
                 </div>
               </div>
+              <p class="Untertext-Produktbilder"> Für jedes Fahrrad geeignet </p>
             </div>
 
             <div class="column-33">
               <img src="edrive_150_480x480px.png" alt="edrive 150" width="350" height="500" class="image-für-overlay">
               <div class="middle">
                 <div class="overlay-text">
-                  <a href="Produkt.html#premium_variante"> Premium 150 </a>
+                  <a href="Produkt.html#premium_variante"> Premium Variante 1 </a>
                 </div>
               </div>
+              <p class="Untertext-Produktbilder"> Für alle, die mehr wollen </p>
             </div>
 
             <div class="column-33">
               <img src="edrive1000.jpg" alt="edrive1000" width="350" height="500" class="image-für-overlay">
               <div class="middle">
                 <div class="overlay-text">
-                  <a href="Produkt.html#premium_variante_2"> Premium 1000 </a>
+                  <a href="Produkt.html#premium_variante_2"> Premium Variante 2 </a>
                 </div>
               </div>
+              <p class="Untertext-Produktbilder"> Für lange Strecken </p>
             </div>
 
           </div>
