--- a/Kontakt.html
+++ b/Kontakt.html
@@ -54,38 +54,16 @@
       <div id="main">
         <div class="contact">
           <h1>Kontakt</h1>
-          <h2>So können Sie uns erreichen</h2>
+          <h2>Sie haben Fragen zum Produkt? So können Sie uns erreichen</h2>
           <hr>
           <p>Egal ober telefonisch, direkt vor Ort oder per Mail. Wir sind immer für Sie da. Außerhalb unserer Öffnungszeiten, werden Ihre Telefonate an unsere Supporthotline weitergeleitet, welche Ihnen Fragen rund um Ihren Elektroantrieb
             beantworten</p>
 
-          <tbody>
-            <tr>
-              <td>E-Mail Adresse</td>
-              <td>elektro@bikes.de</td>
-            </tr><br>
-            <tr>
-              <td>Telefonnummer</td>
-              <td>0800/9941000</td>
-            </tr><br>
-            <tr>
-              <td>Adresse:</td>
-              <td>Elekto Bikes GmbH</td>
-            </tr><br>
-            <tr>
-              <td></td>
-              <td>Marienstraße 20</td>
-            </tr><br>
-            <tr>
-              <td></td>
-              <td>89518 Heidenheim</td>
-            </tr><br>
-          </tbody>
-
-
-          <h2>Anfahrt</h2>
+          
+          <h2>Hier ist unsere Zentrale</h2>
           <hr>
-          <p>So kommen Sie zu uns</p>
+          <p>Hier treffen Sie uns an. Durch die Nähe zur Dualen Hochschule Heidenheim können wir wissbegierigen Jugendlichen eine Spielwiese rund um elektrische Antriebe bieten. So geht die Innovation von morgen!</p>
+          <p>Wenn Sie möchten, kommen Sie doch auch einfach einmal auf einen Kaffe vorbei. Dann können Sie sich ganz unverbindlich über unsere Produkte informieren und eine Testfahrt mit einem unserer Ausstellungsräder machen.</p>
           <div class="mapouter">
             <div class="gmap_canvas">
               <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Marienstra%C3%9Fe%2020,%2089518%20Heidenheim&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
