Kontaktseite weiter ausgebaut

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -54,22 +54,126 @@
       <div id="main">
         <div class="contact">
           <h1>Kontakt</h1>
-          <h2>Sie haben Fragen zum Produkt? So können Sie uns erreichen</h2>
           <hr>
-          <p>Egal ober telefonisch, direkt vor Ort oder per Mail. Wir sind immer für Sie da. Außerhalb unserer Öffnungszeiten, werden Ihre Telefonate an unsere Supporthotline weitergeleitet, welche Ihnen Fragen rund um Ihren Elektroantrieb
-            beantworten</p>
 
-          
-          <h2>Hier ist unsere Zentrale</h2>
-          <hr>
-          <p>Hier treffen Sie uns an. Durch die Nähe zur Dualen Hochschule Heidenheim können wir wissbegierigen Jugendlichen eine Spielwiese rund um elektrische Antriebe bieten. So geht die Innovation von morgen!</p>
-          <p>Wenn Sie möchten, kommen Sie doch auch einfach einmal auf einen Kaffe vorbei. Dann können Sie sich ganz unverbindlich über unsere Produkte informieren und eine Testfahrt mit einem unserer Ausstellungsräder machen.</p>
-          <div class="mapouter">
-            <div class="gmap_canvas">
-              <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Marienstra%C3%9Fe%2020,%2089518%20Heidenheim&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-              <a href="https://add-google-map.com"></a>
+
+          <div class="contact-message">
+            <div class="contact-block">
+              <h2>Gibt es noch Fragen?</h2>
+              <p> Sie haben Fragen zum Produkt, zu uns oder unserer Vorgehensweise? Egal ober telefonisch, direkt vor Ort oder per Mail. Wir sind immer für Sie da.</p>
+              <div class="contact-main">
+                <div class="contact-data">
+                  <div class="contact-description">
+                    <p>Telefonnummer</p>
+                  </div>
+                  <div class="contact-description">
+                    <p>E-Mail</p>
+                  </div>
+                  <div class="contact-description">
+                    <p>WhatsApp-Chat</p>
+                  </div>
+                </div>
+                <div class="contact-data">
+                  <div class="contact-detail">
+                    <p><a href="tel:+49152555666777">0152/555666777</a></p>
+                  </div>
+                  <div class="contact-detail">
+                    <p><a href="mailto:elektro@bikes.de">elektro@bikes.de</a></p>
+                  </div>
+                  <div class="contact-detail">
+                    <p><a href="tel:+49152555666777">0152/555666777</a></p>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+
+            <div class="message-block">
+              <h2>Wir freuen uns über Ihre Nachricht!</h2>
+              <form>
+                <div class="form-group">
+                  <label>Nachname *</label>
+                  <div class="input">
+                    <input type="text" class="form-control" name="name" placeholder="Mustermann" required="required">
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label>Vorname *</label>
+                  <div class="input">
+                    <input type="text" class="form-control" name="first_name" placeholder="Max" required="required">
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label>E-Mail Adresse *</label>
+                  <div class="input">
+                    <input type="email" class="form-control" name="email_name" placeholder="max.mustermann@test.de">
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label>Ihr Anliegen</label>
+                  <div class="input">
+                    <select class="form-control" name="issue">
+                      <option value="please_select">
+                        Bitte wählen
+                      </option>
+
+                      <option value="general">
+                        Allgemein
+                      </option>
+
+                      <option value="drive">
+                        Antrieb
+                      </option>
+
+                      <option value="mounting">
+                        Montagefragen
+                      </option>
+
+                      <option value="battery">
+                        Akku
+                      </option>
+
+                      <option value="dealer">
+                        Händlernetz
+                      </option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label>Ihr Anliegen *</label>
+                  <div class="input">
+                    <textarea class="form-control" name="textarea_name" placeholder="" required="required" style="height: 20%;"></textarea>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <input type="submit" class="btn btn-primary" name="button_name" value="Senden">
+                </div>
+                <small>Felder markiert mit * sind Pflichtfelder.</small>
+              </form>
+            </div>
+
+          </div>
+
+          <div class="headquater">
+            <h2>Hier ist unsere Zentrale</h2>
+            <hr>
+            <p>Hier treffen Sie uns an. Durch die Nähe zur Dualen Hochschule Heidenheim können wir wissbegierigen Jugendlichen eine Spielwiese rund um elektrische Antriebe bieten. So geht die Innovation von morgen!</p>
+            <p>Wenn Sie möchten, kommen Sie doch auch einfach einmal auf einen Kaffe vorbei. Dann können Sie sich ganz unverbindlich über unsere Produkte informieren und eine Testfahrt mit einem unserer Ausstellungsräder machen.</p>
+            <div class="mapouter">
+              <div class="gmap_canvas">
+                <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Marienstra%C3%9Fe%2020,%2089518%20Heidenheim&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                <a href="https://add-google-map.com"></a>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
     </main>
