Kontaktseite für heute habe fertig

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -60,7 +60,10 @@
           <div class="contact-message">
             <div class="contact-block">
               <h2>Gibt es noch Fragen?</h2>
+              <br>
               <p> Sie haben Fragen zum Produkt, zu uns oder unserer Vorgehensweise? Egal ober telefonisch, direkt vor Ort oder per Mail. Wir sind immer für Sie da.</p>
+              <br>
+              <p>Eine Anfahrtsbeschreibung finden Sie weiter unten auf der Seite. Oder klicken Sie einfach <a href="Kontakt.html#gmap_canvas">hier</a>, um direkt dorthin zu gelangen</p>
               <div class="contact-main">
                 <div class="contact-data">
                   <div class="contact-description">
@@ -153,18 +156,17 @@
                 </div>
 
                 <div class="form-group">
-                  <input type="submit" class="btn btn-primary" name="button_name" value="Senden">
+                  <input type="submit" class="btn_send_mail" name="button_name" value="Anfrage senden">
                 </div>
-                <small>Felder markiert mit * sind Pflichtfelder.</small>
               </form>
             </div>
 
           </div>
 
           <div class="headquater">
-            <h2>Hier ist unsere Zentrale</h2>
+            <h1>Hier ist unsere Zentrale</h1>
             <hr>
-            <p>Hier treffen Sie uns an. Durch die Nähe zur Dualen Hochschule Heidenheim können wir wissbegierigen Jugendlichen eine Spielwiese rund um elektrische Antriebe bieten. So geht die Innovation von morgen!</p>
+            <p>Hier treffen Sie uns an. Unser Hauptquartier haben wir im beschaulichen Heidenheim aufgeschlagen. Wir sind mitten auf dem Campus der Dualen Hochschule in Heidenheim. Durch die Nähe zur Dualen Hochschule Heidenheim können wir wissbegierigen Jugendlichen eine Spielwiese rund um elektrische Antriebe bieten. So geht die Innovation von morgen!</p>
             <p>Wenn Sie möchten, kommen Sie doch auch einfach einmal auf einen Kaffe vorbei. Dann können Sie sich ganz unverbindlich über unsere Produkte informieren und eine Testfahrt mit einem unserer Ausstellungsräder machen.</p>
             <div class="mapouter">
               <div class="gmap_canvas">
