Redesign Footer & Line-Height für kompl. HTML

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -139,7 +139,9 @@
             <p>89518 Heidenheim</p>
           </div>
           <div class="column-footer-right">
-            <p><b>Aktuelle News finden Sie auf unseren Social Media Accounts:</b></p>
+            <p><b>Social Media:</b></p>
+            <p>Aktuelle Informationen teilen</p>
+            <p>wir hier mit Ihnen:</p>
             <div class="social_media">
               <a href="https://www.facebook.de"><img src="facebook_logo.svg" alt="Hier kommen Sie zu Facebook"></a>
             </div>
