Navigationsleiste: Link zu Produkt.html und active funktioniert jetzt

--- a/Produkt.html
+++ b/Produkt.html
@@ -19,7 +19,7 @@
         <div class="topnav" id=myTopnav>
           <a href="index.html"><img class="logo_klein" src="logo1.png" alt="Das ist unser Logo"> </a>
           <a href="index.html">Home</a>
-          <div class="dropdown">
+          <div class="dropdown active">
             <button class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
             <div class="dropdown-content">
               <a href="Produkt.html#standard_variante">Standard</a>
