--- a/Kontakt.html
+++ b/Kontakt.html
@@ -20,7 +20,7 @@
           <a href="index.html"><img class="logo_klein" src="logo1.png" alt="Das ist unser Logo"> </a>
           <a href="index.html">Home</a>
           <div class="dropdown">
-            <button class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
+            <button onclick="location.href='Produkt.html'" class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
             <div class="dropdown-content">
               <a href="Produkt.html#standard_variante">Standard</a>
               <a href="Produkt.html#premium_variante">Premium</a>
