Änderung Bild Produktseite

--- a/Produkt.html
+++ b/Produkt.html
@@ -71,7 +71,7 @@
         <div class="container-1">
           <div class="row">
             <div class="column-50-left">
-              <img src="Bikestail_Motor.JPG" alt="Motor Bikestail" width="350" height="500">
+              <img src="Bikestail_Motor_480x480px.png" alt="Motor Bikestail" width="350" height="500">
             </div>
             <div class="column-50-right">
               <h2> Kompakt und powervoll </h2>
@@ -95,7 +95,8 @@
 							</ul>
             </div>
             <div class="column-50-right">
-              <img class="round-image-komplettpaket"src="Bikestail_Produktpaket.JPG" alt="Hier sollen Produktbilder hin" width="350" height="500">
+              <img class="round-image-komplettpaket"src="Bikestail_480x480px.png"
+              alt="Produktbild Bikestail" width="350" height="500">
             </div>
           </div>
       </div>
